# primerVizCLI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/primerviz/: __init__.py  alignment.py  analysis.py  cli.py  io.py  models.py  visualize.py
tests/: conftest.py  test_alignment.py  test_analysis.py  test_io.py  test_visualize.py
